[gd_scene load_steps=26 format=3 uid="uid://bj8ynu8013j4j"]

[ext_resource type="Script" uid="uid://dpo124xwpder5" path="res://addons/konado/scripts/dialogue/knd_dialogue_manager.gd" id="1_buo3n"]
[ext_resource type="Script" uid="uid://cyoedi0x84dxy" path="res://addons/konado/scripts/act/acting_Interface.gd" id="2_pq6sw"]
[ext_resource type="Script" uid="uid://b0kbsxqyedoml" path="res://addons/konado/scripts/dialogue/dialogue_Interface.gd" id="3_gl7il"]
[ext_resource type="Shader" uid="uid://dxr17ie00ux36" path="res://addons/konado/shader/Transition/BlindsEffect.gdshader" id="3_utfb4"]
[ext_resource type="Script" uid="uid://cfbojxb1pdbrs" path="res://addons/konado/scripts/audio/audio_interface.gd" id="4_gd2ll"]
[ext_resource type="Texture2D" uid="uid://bb7nhjioefh8a" path="res://sample/demo/sample_arts/示例-咖啡馆-背景.png" id="4_qodmk"]
[ext_resource type="Script" uid="uid://cbf7mvlofpiix" path="res://addons/konado/scripts/items/item_interface.gd" id="4_utfb4"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_e5o0s"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_b1osp"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_h66lv"]
shader = ExtResource("3_utfb4")
shader_parameter/resolution = Vector2(1920, 1080)
shader_parameter/switch_progress = 1.5
shader_parameter/target_switch_texture = ExtResource("4_qodmk")
shader_parameter/current_texture = ExtResource("4_qodmk")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_25pr6"]

[sub_resource type="Gradient" id="Gradient_qodmk"]
colors = PackedColorArray(0, 0, 0, 0.870588, 0.141176, 0.141176, 0.141176, 0.74902)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_qodmk"]
gradient = SubResource("Gradient_qodmk")
fill_to = Vector2(1, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_abjfy"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_hu3il"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ii7ok"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_xsgfs"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_3sqld"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_1xeec"]

[sub_resource type="Gradient" id="Gradient_rm7mg"]
offsets = PackedFloat32Array(0, 0.996764, 1)
colors = PackedColorArray(0.527091, 0.626497, 0.835147, 0.611765, 0.0801724, 0.0952924, 0.127029, 0.0930516, 1, 1, 1, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_sxvt2"]
gradient = SubResource("Gradient_rm7mg")
width = 512
height = 512
fill = 1
fill_from = Vector2(0.5, 0.5)
fill_to = Vector2(0.7, 0.7)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_vnydh"]
texture = SubResource("GradientTexture2D_sxvt2")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_d61i7"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_f70o6"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_e1ahj"]

[node name="DialogManager" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_buo3n")

[node name="MaskLayer" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="DialogUI" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_e5o0s")

[node name="ActingInterface" type="PanelContainer" parent="DialogUI"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_b1osp")
script = ExtResource("2_pq6sw")

[node name="BackgroundLayer" type="ColorRect" parent="DialogUI/ActingInterface"]
material = SubResource("ShaderMaterial_h66lv")
layout_mode = 2
color = Color(0, 0, 0, 1)

[node name="CharaControl" type="Control" parent="DialogUI/ActingInterface/BackgroundLayer"]
layout_mode = 1
anchors_preset = 0
offset_right = 1280.0
offset_bottom = 720.0
scale = Vector2(0.98828125, 0.98828125)

[node name="EffectLayer" type="ColorRect" parent="DialogUI/ActingInterface"]
layout_mode = 2
color = Color(0, 0, 0, 0)

[node name="DialogueInterface" type="VBoxContainer" parent="DialogUI"]
layout_mode = 2
alignment = 2
script = ExtResource("3_gl7il")

[node name="ChoicesBox" type="Control" parent="DialogUI/DialogueInterface"]
custom_minimum_size = Vector2(380, 290)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="ChoicesContainer" type="VBoxContainer" parent="DialogUI/DialogueInterface/ChoicesBox"]
custom_minimum_size = Vector2(400, 300)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20
alignment = 1

[node name="DialogueBox" type="PanelContainer" parent="DialogUI/DialogueInterface"]
custom_minimum_size = Vector2(0, 230)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_25pr6")

[node name="Background" type="TextureRect" parent="DialogUI/DialogueInterface/DialogueBox"]
layout_mode = 2
texture = SubResource("GradientTexture2D_qodmk")

[node name="MarginContainer" type="MarginContainer" parent="DialogUI/DialogueInterface/DialogueBox"]
layout_mode = 2
theme_override_constants/margin_left = 130
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 130
theme_override_constants/margin_bottom = 5

[node name="DialogContent" type="VBoxContainer" parent="DialogUI/DialogueInterface/DialogueBox/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 30

[node name="VBoxContainer" type="VBoxContainer" parent="DialogUI/DialogueInterface/DialogueBox/MarginContainer/DialogContent"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 30

[node name="Name" type="RichTextLabel" parent="DialogUI/DialogueInterface/DialogueBox/MarginContainer/DialogContent/VBoxContainer"]
custom_minimum_size = Vector2(0, 35)
layout_mode = 2
theme_override_font_sizes/normal_font_size = 25
theme_override_styles/normal = SubResource("StyleBoxEmpty_abjfy")
theme_override_styles/background = SubResource("StyleBoxEmpty_hu3il")
bbcode_enabled = true
fit_content = true

[node name="MarginContainer" type="MarginContainer" parent="DialogUI/DialogueInterface/DialogueBox/MarginContainer/DialogContent/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_right = 200

[node name="ContentLable" type="RichTextLabel" parent="DialogUI/DialogueInterface/DialogueBox/MarginContainer/DialogContent/VBoxContainer/MarginContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/normal_font_size = 22
theme_override_styles/normal = SubResource("StyleBoxEmpty_ii7ok")
theme_override_styles/background = SubResource("StyleBoxEmpty_xsgfs")
bbcode_enabled = true
fit_content = true
autowrap_mode = 2
tab_size = 8

[node name="ActionsContainer" type="HBoxContainer" parent="DialogUI/DialogueInterface/DialogueBox/MarginContainer/DialogContent"]
layout_mode = 2
alignment = 1

[node name="存档" type="Button" parent="DialogUI/DialogueInterface/DialogueBox/MarginContainer/DialogContent/ActionsContainer"]
custom_minimum_size = Vector2(75, 35)
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxEmpty_3sqld")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_1xeec")
theme_override_styles/hover = SubResource("StyleBoxTexture_vnydh")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_d61i7")
theme_override_styles/focus = SubResource("StyleBoxEmpty_f70o6")
text = "存档"

[node name="读档" type="Button" parent="DialogUI/DialogueInterface/DialogueBox/MarginContainer/DialogContent/ActionsContainer"]
custom_minimum_size = Vector2(75, 35)
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxEmpty_3sqld")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_1xeec")
theme_override_styles/hover = SubResource("StyleBoxTexture_vnydh")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_d61i7")
theme_override_styles/focus = SubResource("StyleBoxEmpty_f70o6")
text = "读档"

[node name="记录" type="Button" parent="DialogUI/DialogueInterface/DialogueBox/MarginContainer/DialogContent/ActionsContainer"]
custom_minimum_size = Vector2(75, 35)
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxEmpty_3sqld")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_1xeec")
theme_override_styles/hover = SubResource("StyleBoxTexture_vnydh")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_d61i7")
theme_override_styles/focus = SubResource("StyleBoxEmpty_f70o6")
text = "记录"

[node name="退出" type="Button" parent="DialogUI/DialogueInterface/DialogueBox/MarginContainer/DialogContent/ActionsContainer"]
custom_minimum_size = Vector2(75, 35)
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxEmpty_3sqld")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_1xeec")
theme_override_styles/hover = SubResource("StyleBoxTexture_vnydh")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_d61i7")
theme_override_styles/focus = SubResource("StyleBoxEmpty_f70o6")
text = "退出"

[node name="自动" type="Button" parent="DialogUI/DialogueInterface/DialogueBox/MarginContainer/DialogContent/ActionsContainer"]
custom_minimum_size = Vector2(75, 35)
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxEmpty_3sqld")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_1xeec")
theme_override_styles/hover = SubResource("StyleBoxTexture_vnydh")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_d61i7")
theme_override_styles/focus = SubResource("StyleBoxEmpty_f70o6")
toggle_mode = true
text = "自动播放"

[node name="回顾" type="Button" parent="DialogUI/DialogueInterface/DialogueBox/MarginContainer/DialogContent/ActionsContainer"]
custom_minimum_size = Vector2(75, 35)
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxEmpty_3sqld")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_1xeec")
theme_override_styles/hover = SubResource("StyleBoxTexture_vnydh")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_d61i7")
theme_override_styles/focus = SubResource("StyleBoxEmpty_f70o6")
toggle_mode = true
text = "回顾"

[node name="ItemInterface" type="PanelContainer" parent="DialogUI"]
visible = false
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_e1ahj")
script = ExtResource("4_utfb4")

[node name="ItemControl" type="Control" parent="DialogUI/ItemInterface"]
layout_mode = 2

[node name="AudioInterface" type="Node2D" parent="."]
visible = false
script = ExtResource("4_gd2ll")

[node name="BGMPlayer" type="AudioStreamPlayer" parent="AudioInterface"]

[node name="VoicePlayer" type="AudioStreamPlayer" parent="AudioInterface"]

[node name="SoundEffectPlayer" type="AudioStreamPlayer" parent="AudioInterface"]
